<resources>
    <string name="app_name">Beerography</string>
    <string name="title_beer_detail">Beer Detail</string>
    <string name="splash_button">Let\'s get some beers</string>
    <string name="loading_data">Alright matey\n We are contactin\' th\' Captain fer information</string>

    <!--Beer details-->
    <string name="extras_empty">Woow, no details available at the time.</string>
    <string name="abv">ABV:</string>
    <string name="ibu">IBU:</string>
    <string name="organic">Organic:</string>
    <string name="available">Availability:</string>
    <string name="beer_style">Style</string>
    <string name="style_name">Name:</string>
    <string name="style_short_name">Short Name:</string>
    <string name="description">Description</string>

    <string name="no_network_title">No network</string>
    <string name="no_network">Whoops, no Internet. Would you like to connect to Internet?</string>

    <string name="action_share">Share</string>
    <string name="share_type" translatable="false">text/plain</string>
    <string name="share_title">Share Beerography</string>
    <string name="share_content">Check out the coolest Beer app, Beerography in the play store</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_home">Home</string>
    <string name="action_game">Game</string>
    <string name="action_terminology">Terminology</string>
    <string name="action_main_list">Main list</string>
    <!--Animation strings-->
    <string name="main_list_item_transition_name" translatable="false">beeritem</string>

    <string name="version">Version 1.7</string>
    <string name="powered">Powered by BreweryDB</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Beer</string>

    <string name="drawer_welcome_text">Ahoy me bucko</string>
    <string name="navigation_drawer_open">Open chest</string>
    <string name="navigation_drawer_close">Close chest</string>
    <string name="no_beers">Whoops, no beers found me bucko</string>

    <string name="quit">Quit</string>
    <string name="quit_text">Are you sure you want to exit the app, matey?</string>

    <string name="analytics_navigation" translatable="false">Navigation</string>
    <string name="analytics_exit" translatable="false">Exit</string>
    <string name="analytics_feedback" translatable="false">Feedback</string>
    <string name="analytics_share" translatable="false">Share</string>
    <string name="analytics_about" translatable="false">About</string>
    <string name="analytics_terminologies" translatable="false">Terminologies</string>
    <string name="analytics_game" translatable="false">Game</string>
    <string name="analytics_home" translatable="false">Home</string>
    <string name="analytics_search" translatable="false">Search</string>
</resources>
