<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_2"
            android:gravity="center"
            android:textSize="@dimen/body_text"
            android:text="@string/loading_data"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_beer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/iv_beer_poster"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_extra_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_2"
            android:layout_marginStart="@dimen/keyline_2"
            android:textSize="@dimen/body_text"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_beer_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_1"
        android:text="@string/description"
        android:textColor="@color/fontHeading"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_beer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        android:textSize="@dimen/body_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_beer_style_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_1"
        android:textColor="@color/fontHeading"
        android:text="@string/beer_style"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_beer_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        android:textSize="@dimen/body_text"
        android:visibility="gone" />
</LinearLayout>